[project]
name = "mcp-server-undetected-chromedriver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_undetected_chromedriver"]


[project.scripts]
mcp-server-undetected-chromedriver = "mcp_server_undetected_chromedriver:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
